--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "hexo-theme-shiro",
-  "version": "1.1.0",
-  "description": "A pure and simple theme for Hexo.",
-  "repository": "https://github.com/Acris/hexo-theme-shiro.git",
+  "name": "hexo-shiro-blog",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "dev": "tailwindcss -i ./source/css/_tailwind.css -o ./source/css/style.min.css --watch",
-    "build": "tailwindcss -i ./source/css/_tailwind.css -o ./source/css/style.min.css --minify"
+    "build:theme": "tailwindcss -i ./themes/shiro/source/css/_tailwind.css -o ./themes/shiro/source/css/style.min.css --minify",
+    "build": "npm run build:theme && npx hexo generate", // 先编译主题CSS，再生成Hexo静态文件
+    "clean": "npx hexo clean",
+    "dev": "npx hexo server"
   },
-  "keywords": [
-    "hexo",
-    "theme",
-    "shiro",
-    "tailwind",
-    "clean",
-    "simple"
-  ],
-  "author": "Acris Liu",
-  "license": "MIT",
-  "devDependencies": {
-    "@tailwindcss/cli": "^4.1.18",
-    "@tailwindcss/typography": "^0.5.19",
-    "tailwindcss": "^4.1.18"
+  "engines": {
+    "node": ">=14"
+  },
+  "dependencies": {
+    "hexo": "^7.3.0",
+    "hexo-cli": "^4.3.0",
+    "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-category": "^2.0.0",
+    "hexo-generator-index": "^3.0.0",
+    "hexo-generator-tag": "^2.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-stylus": "^3.0.0",
+    "hexo-server": "^3.0.0",
+    "tailwindcss": "^3.4.0" // Shiro主题依赖Tailwind CSS
   }
 }
